# content-generator

./: .env.example  .gitignore  CLAUDE.md  CSV_VIEWER_README.md  README.md  WORKFLOW_GUIDE.md  app.py  csv_viewer.py  database.dbml  pyproject.toml  requirements.txt  test_data_display.py
.streamlit/: config.toml
agents/: content_agent.py  prompt_agent.py  query_agent.py  simple_query_agent.py  template_agent.py  topic_agent.py
config/: database.py  llm_config.py
database/: connection.py  mcp_client.py  query_generator.py  schema_parser.py
models/: claude_model.py  gemini_model.py  grok_model.py  llm_factory.py  llm_interface.py  openai_model.py
utils/: college_data_display.py  content_types.py  csv_loader.py  keyword_parser.py  serpapi_helper.py
